--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Crud</title>
   <link rel="stylesheet" href="app/css/style.css">
 </head>
+
 <body>
   <main>
     <section class="container grid">
@@ -65,7 +67,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
+            <!-- <tr>
               <td>Nombre</td>
               <td>Apellidos</td>
               <td>Teléfono</td>
@@ -77,228 +79,12 @@
                   <button class="btn btn--samall btn--danger">Eliminar</button>
                 </div>
               </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
-            <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr>
+            </tr> -->
+            <sena-card>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed reprehenderit pariatur! Consequuntur
+              vero earum, quasi mollitia aliquam quaerat velit aliquid sapiente quos debitis id, ipsum ratione porro
+              voluptas natus?
+            </sena-card>
           </tbody>
         </table>
       </div>
@@ -306,4 +92,5 @@
   </main>
   <script src="app/js/app.js" type="module"></script>
 </body>
+
 </html>
