Creamos la tabla dinamica y la llenamos de datos del servidor

--- a/cliente/index.html
+++ b/cliente/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="tabla">
         <h2 class="title">Listado de usuarios</h2>
-        <table>
+        <table id="tabla">
           <thead>
             <tr>
               <th>Nombre</th>
@@ -80,11 +80,6 @@
                 </div>
               </td>
             </tr> -->
-            <sena-card>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti sed reprehenderit pariatur! Consequuntur
-              vero earum, quasi mollitia aliquam quaerat velit aliquid sapiente quos debitis id, ipsum ratione porro
-              voluptas natus?
-            </sena-card>
           </tbody>
         </table>
       </div>
