--- a/cliente/index.html
+++ b/cliente/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -67,19 +67,6 @@
             </tr>
           </thead>
           <tbody>
-            <!-- <tr>
-              <td>Nombre</td>
-              <td>Apellidos</td>
-              <td>Teléfono</td>
-              <td>Correo</td>
-              <td>Documento</td>
-              <td>
-                <div class="botonera">
-                  <button class="btn btn--samall">Editar</button>
-                  <button class="btn btn--samall btn--danger">Eliminar</button>
-                </div>
-              </td>
-            </tr> -->
           </tbody>
         </table>
       </div>
