--- a/cliente/index.html
+++ b/cliente/index.html
@@ -19,6 +19,7 @@
       <div class="formulario">
         <h2 class="title">Datos basicos</h2>
         <form id="form" class="form__container" novalidate>
+          <input type="hidden" id="identificador">
           <div class="form-group">
             <label for="nombre" class="form__label">Nombre</label>
             <input type="text" name="nombre" id="nombre" class="form__input" data-required="true">
